adjust margins/padding of menu+inv buttons to avoid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ canvas:focus, canvas:focus{
 }
 
 .pad-sm {
-	padding: 10px;
+	padding: 4px;
 }
 
 .pad-med {
@@ -101,7 +101,7 @@ canvas:focus, canvas:focus{
 .inv-btn { 
 	font-family: 'Eczar', serif;
 	width: 60px;
-	margin: 2px;
+	margin: 0px;
 
 }
 
@@ -132,7 +132,8 @@ button:active {
 /* Button tweaks to look more old-school. Feel Free to remove if they don't fit the desired game feel */
 
 button {
-    margin: 4px;
+    width:108px;
+    margin:0px 0px 6px 0px;
 	border-radius: 0;
 	border-width: 5px;
 	border-top-color: #cacaca;
